# sndp-project-management

./: .gitignore  README.md  SPEC.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/accounts/: admin.py  forms.py  models.py  schema.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: schema.py  settings.py  urls.py
backend/project_management/: helpers.py  models.py  schema.py
backend/project_management/migrations/: 0001_initial.py
backend/project_management/schema/: __init__.py  mutations.py  queries.py  types.py
dev/: notes.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: apollo.ts  app.css  root.tsx  routes.ts
frontend/app/components/: header.tsx  layout.tsx  login-form.tsx
frontend/app/components/projects/: project-form.tsx  project-list.tsx
frontend/app/components/ui/: dialog.tsx  table.tsx  toaster.tsx
frontend/app/hooks/: useAuth.ts  useProjects.ts  useTaskComments.ts  useTasks.ts
frontend/app/lib/: apollo.ts  auth.ts  errors.ts
frontend/app/routes/: home.tsx  login.tsx  network-error.tsx  project.$projectId.tsx  projects.tsx  task.$taskId.tsx
frontend/app/types/: types.base.ts  types.projects.ts  types.tasks.ts
