[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-graphql-jwt>=0.4.0",
    "graphene-django>=3.2.3",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]
